--- a/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
+++ b/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
@@ -9,7 +9,7 @@
 <div class="container">
     <ngb-alert *ngIf="well?.OpenSupportTickets.length > 0" [type]="'warning'" [dismissible]="false">
         <p *ngFor="let ticket of well.OpenSupportTickets">
-            This well has an active trouble ticket <a routerLink="/support-tickets/{{ticket.SupportTicketID}}">#{{ticket.SupportTicketID}}</a> opened by {{ticket.CreatorUser.FullName}}<span *ngIf="ticket.AssigneeUser !== null"> and currently assigned to {{ticket.AssigneeUser.FullName}}</span>. Follow the <a routerLink="/support-tickets/{{ticket.SupportTicketID}}">link</a> to view more details.
+            This well has an active trouble ticket <a routerLink="/support-tickets/{{ticket.SupportTicketID}}">#{{ticket.SupportTicketID}}: {{ticket.SupportTicketTitle}}</a> opened by {{ticket.CreatorUser.FullName}}<span *ngIf="ticket.AssigneeUser !== null"> and currently assigned to {{ticket.AssigneeUser.FullName}}</span>. Follow the <a routerLink="/support-tickets/{{ticket.SupportTicketID}}">link</a> to view more details.
         </p>
     </ngb-alert>
     <app-alert-display></app-alert-display>
