--- a/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -139,6 +139,9 @@
                     <a class="dropdown-item" routerLink="/irrigation-units">
                         Irrigation Units
                     </a>
+                    <a class="dropdown-item" routerLink="/support-tickets">
+                        Support Ticket Management
+                    </a>
                 </div>
             </li>
             <li class="nav-item mapItem" [ngClass]="{'currentPage': isMapCurrentPage()}" *ngIf="!isUnassigned()">
