--- a/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -127,17 +127,19 @@
                     <a class="dropdown-item" routerLink="/dashboard">
                         Manager Dashboard
                     </a>
+                    <a class="dropdown-item" routerLink="/irrigation-units">
+                        Irrigation Units
+                    </a>
+                    <div class="dropdown-divider"></div>
                     <a class="dropdown-item" routerLink="/sensors">
                         Sensor List
                     </a>
                     <a class="dropdown-item" routerLink="/sensor-status">
                         Sensor Status Map
                     </a>
+                    <div class="dropdown-divider"></div>
                     <a class="dropdown-item" routerLink="/sensor-anomalies" *ngIf="!isReadOnly()">
                         Sensor Anomaly Reports
-                    </a>
-                    <a class="dropdown-item" routerLink="/irrigation-units">
-                        Irrigation Units
                     </a>
                     <a class="dropdown-item" routerLink="/support-tickets">
                         Support Ticket Management
