UI/UX rework for 99 and 232: gave support ticket description a bit more space on detail page, and increased its max length. Displaying both units on irrigation unit detail page openET grid

--- a/Zybach.Web/src/app/pages/irrigation-unit-detail/irrigation-unit-detail.component.html
+++ b/Zybach.Web/src/app/pages/irrigation-unit-detail/irrigation-unit-detail.component.html
@@ -58,18 +58,6 @@
                 <div class="card-body mb-3">
                     <div *ngIf="openETData?.length > 0; then hasOpenETData else noOpenETData"></div>
                     <ng-template #hasOpenETData>
-                        <div class="row col float-left">
-                            <!-- <label>Units:&nbsp;</label> -->
-                            <div class="btn-group btn-group-toggle float-left">
-                                <label class="btn btn-toggle btn-sm btn-zybach" [ngClass]="unitsShown == 'ac-ft' ? 'active' : ''">
-                                <input type="radio" name="ETAndPrecipUnits" (click)="toggleUnitsShown()" [disabled]="unitsShown == 'ac-ft'"> ac-ft
-                                </label>
-                                <label class="btn btn-toggle btn-sm btn-zybach" [ngClass]="unitsShown == 'in' ? 'active' : ''">
-                                <input type="radio" name="ETAndPrecipUnits" (click)="toggleUnitsShown()" [disabled]="unitsShown == 'in'"> in
-                                </label>
-                            </div>
-                            
-                        </div>
                         <div class="row">
                             <div class="col">
                                 <button class="btn btn-secondary btn-md float-right m-2" style="cursor: pointer;" (click)="exportToCsv()" placement="top"
@@ -82,7 +70,7 @@
                             <ag-grid-angular #openETDataGrid style="width: 100%; height: 300px;" 
                                 class="ag-theme-balham" [rowData]="openETData"
                                 [columnDefs]="columnDefs" (firstDataRendered)="onFirstDataRendered($event)"
-                                [pagination]="true" [paginationPageSize]="10" [suppressMenuHide]="true">
+                                [pagination]="false" [suppressMenuHide]="true">
                             </ag-grid-angular>
                         </div>
                     </ng-template>
