--- a/Zybach.Web/src/app/shared/components/support-ticket-upsert/support-ticket-upsert.component.html
+++ b/Zybach.Web/src/app/shared/components/support-ticket-upsert/support-ticket-upsert.component.html
@@ -46,7 +46,7 @@
                 <label><strong>Description: </strong></label>
             </div>
             <div class="col-6 text-left mb-2">
-                <textarea class="form-control" name="SupportTicketDescription"
+                <textarea class="form-control" name="SupportTicketDescription" rows="5"
                     placeholder="Description" [(ngModel)]="model.SupportTicketDescription">
                 </textarea>
             </div>
