Added option to filter Sensor Status map by Last Voltage Reading: "Filter Map By" dropdown added, with "Last Message Age" and "Last Voltage Reading" options; map icon colors updating according to selection; filter options dropdown values updating according to filter selection, and successfully filtering map icons; map legend updating when filter selection is changed; Map popup display updated to better indicate when a well has multiple sensors (i.e. added an <hr> between sensor sections)

--- a/Zybach.Web/src/app/pages/sensor-status-map-popup/sensor-status-map-popup.component.html
+++ b/Zybach.Web/src/app/pages/sensor-status-map-popup/sensor-status-map-popup.component.html
@@ -5,6 +5,7 @@
 <label class="rowHeader">Field Name:</label>{{fieldName}}
 
 <div *ngFor="let sensor of sensors">
+    <hr class="mt-0">
     <label class="rowHeader">{{getSensorDisplay(sensor)}}</label><br />
     <label class="rowHeader">Last Message Received:</label> {{getLastMessageReceived(sensor)}}<br />
     <label class="rowHeader">Last Voltage Reading:</label> {{getLastVoltageReading(sensor)}}
